examples/invalid/type_mismatch.mc
int x;
bool ok = true;

x = ok;
